--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.12",
+    "expo": "^1.0.0",
+    "expo-cli": "^6.1.0",
+    "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
