--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^1.0.0",
+    "@expo-google-fonts/inter": "^0.2.2",
+    "expo": "^47.0.13",
     "expo-cli": "^6.1.0",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.9"
+    "react-native-web": "~0.18.7",
+    "expo-splash-screen": "~0.17.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
-    "@types/react-native": "~0.70.6",
+    "@babel/core": "^7.19.3",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "^0.70.9",
     "typescript": "^4.6.3"
   },
   "private": true
